# fz_flow

./: .gitignore  Vibe_Data_Analysis_网页流程与技术架构统一方案_v2.md  vibe-data-analysis-agent-architecture.md  最终交付_一键启动与实施说明.md  服装商品数据LLM分析应用-产品需求文档(PRD).md  服装商品数据LLM分析应用_实现方案与分步落地指南.md  要求new-file.txt  面料主动企划系统_开发文档_V1.md
apps/: README.md
apps/vibe_backend/: README.md  package-lock.json  package.json  pyproject.toml
apps/vibe_backend/app/: main.py  store.py
apps/vibe_backend/app/routers/: admin.py  analysis_sessions.py  artifacts.py  bridge.py  clothing.py  decks.py  llm_agent.py  memory.py  preferences.py  scene_builder.py  scenes.py  semantic_cache.py  slides.py  sql_result_agent.py
apps/vibe_backend/app/services/: artifact_service.py  insight_narrative_service.py  llm_agent_service.py  prd_scene_configs.py  price_scene_config.py  query_service.py  runtime_persistence_service.py  scene_cache_service.py  scene_playbooks.py  semantic_field_cache_service.py  slide_service.py  sql_result_agent_service.py
apps/vibe_backend/vibe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: config_store.json  fz-watchdog.out
demo/: bootstrap.py  requirements.txt  run_demo.py
deploy/: fz-workflow-demo.app.env.example  rsync-excludes.txt
docs/: DeepFlow_PPT接入决策与执行顺序_M1M2_2026-04-14.md  PPT模块资料总结与方案对比.md  role_enabled_说明.md  workflow_guide.md  业务问题到SQL数据0-1实施规划_2026-05-14.md  场景语义配置_LLM推荐_执行区说明.md  字段与SQL阶段实现对照评估报告_2026-04-14.md  项目交接_数据库导入与启动配置说明_2026-05-15.md
docx/: Windows_Mac_远程Codex开发方案.md  git相关项目.md
output/: analysis_6de417c3c6d6.md  analysis_smoke001.pptx
(+71 files in other folders)
